styles corrections on smaller devices

--- a/styles/container.css
+++ b/styles/container.css
@@ -1,5 +1,5 @@
 .container{
-    width: 80%;
+    width: 90%;
     background-color: white;
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
@@ -9,4 +9,21 @@
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+}
+
+@media (min-width: 1px) and (max-width: 480px) {
+    .container{
+        padding: 8px;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+}
+
+@media (min-width: 481px) and (max-width: 768px){
+    .container{
+        padding: 8px;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
